--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -1,27 +1,26 @@
-<h1>Directors</h1>
+<div class="row my-3">
+  <div class="col">
+    <h1>Directors</h1>
+  </div>
+</div>
+
+<div class="row my-3">
+  <div class="col-2 offset-10">
+    <%= link_to 'New Director', new_director_path, class: "btn btn-success", role: "button" %>
+  </div>
+</div>
 
 <table class="table">
   <thead>
     <tr>
       <th scope="col">Name</th>
-      <th scope="col">Original name</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @directors.each do |director| %>
       <tr>
-        <td><%= director.name %></td>
-        <td><%= director.original_name %></td>
-        <td><%= link_to 'Show', director, class: "btn btn-primary btn-sm" %></td>
-        <td><%= link_to 'Edit', edit_director_path(director), class: "btn btn-secondary btn-sm" %></td>
-        <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
+        <td><%= link_to director.name, director %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Director', new_director_path %>
