--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -1,12 +1,41 @@
-<p>
-  <strong>Name:</strong>
-  <%= @director.name %>
-</p>
+<div class="row">
+  <div class="col">
+    <h1 class="my-3">
+      <%= @director.name %>
+      <br>
+      <small class="text-muted">
+        <%= @director.original_name %>
+      </small>
+    </h1>
+  </div>
+</div>
 
-<p>
-  <strong>Original name:</strong>
-  <%= @director.original_name %>
-</p>
+<div class="row my-3">
+  <div class="col-2 offset-10">
+    <%= link_to 'Edit', edit_director_path(@director), class: "btn btn-success", role: "button" %>
+    <%= link_to 'Delete', @director, class: "btn btn-danger", data: { confirm: 'Are you sure?' }, role: "button" %>
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_director_path(@director) %> |
-<%= link_to 'Back', directors_path %>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Release date</th>
+      <th>Series</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @director.movies.each do |movie| %>
+      <tr>
+        <td><%= link_to movie.title, movie %></td>
+        <td><%= movie.release_date %></td>
+        <td>
+          <% if movie.series %>
+            <%= link_to movie.series.name, movie.series %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
