--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -1,29 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div class="row my-3">
+  <div class="col">
+    <h1>Series</h1>
+  </div>
+</div>
 
-<h1>Series</h1>
+<div class="row my-3">
+  <div class="col-2 offset-10">
+    <%= link_to 'New Series', new_series_path, class: "btn btn-success", role: "button" %>
+  </div>
+</div>
 
 <table class="table">
   <thead>
     <tr>
       <th scope="col">Name</th>
-      <th scope="col">Original name</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @series.each do |series| %>
       <tr>
-        <td><%= series.name %></td>
-        <td><%= series.original_name %></td>
-        <td><%= link_to 'Show', series, class: "btn btn-primary btn-sm" %></td>
-        <td><%= link_to 'Edit', edit_series_path(series), class: "btn btn-secondary btn-sm" %></td>
-        <td><%= link_to 'Destroy', series, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
+        <td><%= link_to series.name, series %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Series', new_series_path %>
