--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -1,14 +1,42 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col">
+    <h1 class="my-3">
+      <%= @series.name %>
+      <br>
+      <small class="text-muted">
+        <%= @series.original_name %>
+      </small>
+    </h1>
+  </div>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @series.name %>
-</p>
+<div class="row my-3">
+  <div class="col-2 offset-10">
+    <%= link_to 'Edit', edit_series_path(@series), class: "btn btn-success", role: "button" %>
+    <%= link_to 'Delete', @series, class: "btn btn-danger", data: { confirm: 'Are you sure?' }, role: "button" %>
+  </div>
+</div>
 
-<p>
-  <strong>Original name:</strong>
-  <%= @series.original_name %>
-</p>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Release date</th>
+      <th>Director</th>
+    </tr>
+  </thead>
 
-<%= link_to 'Edit', edit_series_path(@series) %> |
-<%= link_to 'Back', series_index_path %>
+  <tbody>
+    <% @series.movies.each do |movie| %>
+      <tr>
+        <td><%= link_to movie.title, movie %></td>
+        <td><%= movie.release_date %></td>
+        <td>
+          <% if movie.director %>
+            <%= link_to movie.director.name, movie.director %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
