--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -13,7 +13,7 @@
 <div class="row my-3">
   <div class="col-2 offset-10">
     <%= link_to 'Edit', edit_director_path(@director), class: "btn btn-success", role: "button" %>
-    <%= link_to 'Delete', @director, class: "btn btn-danger", data: { confirm: 'Are you sure?' }, role: "button" %>
+    <%= link_to 'Delete', @director, method: :delete, class: "btn btn-danger", data: { confirm: 'Are you sure?' }, role: "button" %>
   </div>
 </div>
 
