--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -17,7 +17,7 @@
 <div class="row my-3">
   <div class="col-2 offset-10">
     <%= link_to 'Edit', edit_movie_path(@movie), class: "btn btn-success", role: "button" %>
-    <%= link_to 'Delete', @movie, class: "btn btn-danger", data: { confirm: 'Are you sure?' }, role: "button" %>
+    <%= link_to 'Delete', @movie, method: :delete, class: "btn btn-danger", data: { confirm: 'Are you sure?' }, role: "button" %>
   </div>
 </div>
 
