--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -25,12 +25,32 @@
 
       <div class="form-group">
         <%= form.label :director_id %>
-        <%= form.collection_select :director_id, Director.all, :id, :name, { include_blank: true }, { class: "form-control" } %>
+        <%= form.collection_select :director_id, Director.order(:name), :id, :name, { include_blank: true }, { class: "form-control" } %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :director2_id %>
+        <%= form.collection_select :director2_id, Director.order(:name), :id, :name, { include_blank: true }, { class: "form-control" } %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :director3_id %>
+        <%= form.collection_select :director3_id, Director.order(:name), :id, :name, { include_blank: true }, { class: "form-control" } %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :director4_id %>
+        <%= form.collection_select :director4_id, Director.order(:name), :id, :name, { include_blank: true }, { class: "form-control" } %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :director5_id %>
+        <%= form.collection_select :director5_id, Director.order(:name), :id, :name, { include_blank: true }, { class: "form-control" } %>
       </div>
 
       <div class="form-group">
         <%= form.label :series_id %>
-        <%= form.collection_select :series_id, Series.all, :id, :name, { include_blank: true }, { class: "form-control" } %>
+        <%= form.collection_select :series_id, Series.order(:name), :id, :name, { include_blank: true }, { class: "form-control" } %>
       </div>
 
       <div class="form-group">
