fix column size

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -12,19 +12,19 @@
 
 <table class="table">
   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Release date</th>
-      <th>Director</th>
-      <th>Series</th>
+    <tr class="row">
+      <th class="col-4">Title</th>
+      <th class="col-2">Release date</th>
+      <th class="col-3">Director</th>
+      <th class="col-3">Series</th>
     </tr>
   </thead>
   <tbody>
     <% @movies.each do |movie| %>
-      <tr>
-        <td><%= link_to movie.title, movie %></td>
-        <td><%= movie.release_date %></td>
-        <td>
+      <tr class="row">
+        <td class="col-4"><%= link_to movie.title, movie %></td>
+        <td class="col-2"><%= movie.release_date %></td>
+        <td class="col-3">
           <% if movie.director %>
             <%= link_to movie.director.name, movie.director %>
           <% end %>
@@ -41,7 +41,7 @@
             <br><%= link_to movie.director5.name, movie.director5 %>
           <% end %>
         </td>
-        <td>
+        <td class="col-3">
           <% if movie.series %>
             <%= link_to movie.series.name, movie.series %>
           <% end %>
