--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -26,7 +26,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @director.movies.includes(:series).order(:release_date).each do |movie| %>
+    <% @movies.each do |movie| %>
       <tr class="row">
         <td class="col-6"><%= link_to movie.title, movie %></td>
         <td class="col-2"><%= movie.release_date %></td>
