--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-3">
   <div class="col">
     <h2>Sign up</h2>
   </div>
@@ -6,25 +6,28 @@
 
 <div class="row">
   <div class="col">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "needs-validation", novalidate: true }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        <%= f.email_field :email, autocomplete: "email", class: "form-control", required: true %>
+        <div class="invalid-feedback"></div>
       </div>
 
       <div class="form-group">
         <%= f.label :password %>
-        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control", required: true, minlength: 6 %>
         <% if @minimum_password_length %>
           <small class="form-text text-muted">(<%= @minimum_password_length %> characters minimum)</small>
         <% end %>
+        <div class="invalid-feedback"></div>
       </div>
 
       <div class="form-group">
         <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", required: true, minlength: 6 %>
+        <div class="invalid-feedback"></div>
       </div>
 
       <%= f.submit "Sign up", class: "btn btn-primary" %>
