--- a/app/views/series/_form.html.erb
+++ b/app/views/series/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col">
-    <%= form_with(model: series, local: true) do |form| %>
+    <%= form_with(model: series, local: true, class: "needs-validation", html: { novalidate: true }) do |form| %>
       <% if series.errors.any? %>
         <div id="error_explanation" class="alert alert-danger" role="alert">
           <h4 class="alert-heading"><%= pluralize(series.errors.count, "error") %> prohibited this series from being saved:</h4>
@@ -15,12 +15,14 @@
 
       <div class="form-group">
         <%= form.label :name %>
-        <%= form.text_field :name, class: "form-control" %>
+        <%= form.text_field :name, class: "form-control", required: true %>
+        <div class="invalid-feedback"></div>
       </div>
 
       <div class="form-group">
         <%= form.label :original_name %>
         <%= form.text_field :original_name, class: "form-control" %>
+        <div class="invalid-feedback"></div>
       </div>
 
       <div class="actions">
